Fixing 100% window occupancy on mobile

--- a/d011/css/style.css
+++ b/d011/css/style.css
@@ -19,4 +19,5 @@ div.astronauta {
   background-repeat: no-repeat;
   background-size: auto;
   height: 100vh;
+  height: 100dvh;
 }
